<resources>
    <string name="app_name">Formation Advisor</string>
    <string name="activity_connexion">Se connecter</string>
    <string name="activity_inscription">Créer un compte</string>
    <string name="activity_boite_reception_message">Mes messages</string>
    <string name="activity_modifier_profil">Editer profil</string>
    <string name="activity_modifier_mot_de_passe">Paramètres du compte</string>
    <string name="activity_nouveau_centre_formation">Nouvelle formation</string>
    <string name="activity_nouvelle_formation">Nouvelle formation</string>
    <string name="activity_mes_formations">Mes formations</string>
    <string name="activity_modifier_formation">Editer formation</string>
    <string name="activity_ajouter_evaluation">Nouvelle évaluation</string>
    <string name="activity_fiche_formation">Fiche formation</string>
    <string name="activity_commentaires">Commentaires</string>
    <string name="activity_infos_organisme">Détails organisme</string>
    <string name="activity_resultat_recherche">Recherche</string>
    <string name="activity_fiche_centre_formation">Catalogue des formations</string>
    <string name="activity_ficheformation_a_valider">Valider formation</string>
    <string name="bouton_accueil_nouveau_membre">Je suis nouveau</string>
    <string name="bouton_accueil_ancien_membre">Déjà membre</string>
    <string name="bouton_inscription">Continuer</string>
    <string name="bouton_connexion">Se connecter</string>
    <string name="bouton_enregistrer">ENREGISTRER</string>
    <string name="bouton_sauvegarder_profil">Sauvegarder profil</string>
    <string name="bouton_modifier_mot_de_passe">Enregistrer mot de passe</string>
    <string name="bouton_ajouter_formation">Ajouter formation</string>
    <string name="nom_utilisateur">Nom</string>
    <string name="prenom_utilisateur">Prénom</string>
    <string name="pseudo_utilisateur">Pseudo</string>
    <string name="mot_de_passe"> Mot de passe</string>
    <string name="email_utilisateur">E-mail</string>
    <string name="text_view_nom">Nom de famille</string>
    <string name="text_view_prenom">Prénom</string>
    <string name="text_view_email">E-mail</string>
    <string name="mot_de_passe_actuel">Mot de passe actuel</string>
    <string name="nouveau_mot_de_passe">Nouveau mot de passe</string>
    <string name="confirmation_mot_de_passe">Confirmez votre nouveau mot de passe</string>
    <string name="suppression_compte">Êtes-vous sûr de vouloir supprimer votre compte ?</string>
    <string name="bouton_suppression_compte">Supprimer compte</string>
    <string name="search_title">Rechercher une formation</string>
    <string name="nom_formation">Intitulé</string>
    <string name="description_formation">Description</string>
    <string name="durée_formation">Durée</string>
    <string name="date_debut_formation">Date de début</string>
    <string name="date_fin_formation">Date de fin</string>
    <string name="nom_centre_formation">Etablissement</string>
    <string name="adresse_centre_formation">Rue</string>
    <string name="code_postal">Code postal</string>
    <string name="ville_centre_formation">Ville</string>
    <string name="telephone_centre_formation">Téléphone</string>
    <string name="email_centre_formation">E-mail</string>
    <string name="site_centre_formation">Site internet</string>
    <string name="categorie_formation">Domaine : </string>
    <string name="bouton_suivant">Continuer</string>
    <string name="titre_evaluation">Titre</string>
    <string name="commentaire_evaluation">Commentaire</string>
    <string name="bouton_ajouter_evaluation">Ajouter un commentaire</string>
    <string name="bouton_publier_evaluation">Publier evaluation</string>
    <string name="bouton_supprimer_formation">SUPPRIMER</string>
    <string name="option_menu_tableau_de_bord">Tableau de bord</string>
    <string name="option_menu_deconnexion">Déconnexion</string>
    <string name="bouton_rechercher">Rechercher un centre de formation à proximité</string>
    <string name="auteur_annonce_formation">Auteur de l\'annonce</string>
    <string name="bouton_approuver">VALIDER</string>
    <string name="bouton_contacter">CONTACTER</string>
    <string name="text_view_contacter_auteur_annonce">Conctater l\'auteur de l\'annonce : </string>
    <string name="titre_message">Titre</string>
    <string name="texte_message">Message</string>
    <string name="conditions_generales">En t\'inscrivant, tu acceptes les conditions générales de FormationAdvisor</string>
    <string name="mot_de_passe_oublie">Mot de passe oublié ?</string>
    <string name="description_application">Qu\'est-ce que FormationAdvisor ?</string>
    <string name="message1_accueil_boite_message">Votre boîte de réception est vide</string>
    <string name="message2_accueil_boite_message">Lorsque vous recevrez des messages, ils arriveront ici.</string>
    <string name="titre_editer_profil">Editer informations</string>
    <string name="protection_donnees_privees">Ces informations ne sont pas visibles par d\'autres membres</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="titre_editer_mot_de_passe">Modifier mon mot de passe</string>
    <string name="choisir_etablissement">Choisir établissement</string>
    <string name="cancel_title">Cancel</string>
</resources>
