<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.company.formationadvisor.activites.ModifierProfil"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_view_nom" />

        <EditText
            android:id="@+id/nom_utilisateur"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nom_utilisateur"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_view_prenom"/>

        <EditText
            android:id="@+id/prenom_utilisateur"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prenom_utilisateur"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_view_email"/>

        <EditText
            android:id="@+id/email_utilisateur"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_utilisateur"
            android:inputType="textEmailAddress"/>

    </LinearLayout>

    <Button
        android:id="@+id/enregistrer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bouton_enregistrer"
        android:onClick="enregistrerModificationProfil"/>

</LinearLayout>
