<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/pseudo_utilisateur"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/pseudo_utilisateur"/>

    <EditText
        android:id="@+id/mot_de_passe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/mot_de_passe"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/bouton_connexion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bouton_connexion"
        android:onClick="connexion"/>

</LinearLayout>
