<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.company.formationadvisor.activites.NouvelleFormation"
    android:orientation="vertical"
    android:background="#e2e1e1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:background="@drawable/border">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nom_formation"
            android:textColor="#3c3c3c"/>

        <EditText
            android:id="@+id/nom_formation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_profil"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            android:hint="Quel est l'intitulé de votre formation ?"
            android:textColor="#b1b0b0"
            android:textColorHint="#b1b0b0"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/durée_formation"
            android:textColor="#3c3c3c"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/date_debut_formation"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:hint="Date de début"
                android:textColor="#b1b0b0"
                android:textColorHint="#b1b0b0"
                android:background="@drawable/border_profil"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="25dp"/>

            <EditText
                android:id="@+id/date_fin_formation"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:hint="Date de fin"
                android:textColor="#b1b0b0"
                android:textColorHint="#b1b0b0"
                android:background="@drawable/border_profil"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="15dp" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description_formation"
            android:textColor="#3c3c3c"/>

        <EditText
            android:id="@+id/description_formation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_profil"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            android:inputType="textMultiLine"
            android:gravity="top|left"
            android:lines="8"
            android:maxLines="10"
            android:hint="Décrivez ici le contenu de votre formation (objectifs, programme, prérequis)"
            android:textColor="#b1b0b0"
            android:textColorHint="#b1b0b0"/>

        <Button
            android:id="@+id/referencer_formation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bouton_ajouter_formation"
            android:onClick="ajouterNouvelleFormation"
            android:background="#9ac5e4"/>

    </LinearLayout>

</LinearLayout>
